package com.socialpulse.app.notification.domain.enums;

public enum NotificationResourceType {
    USER,
    POST,
    COMMENT
}
