package com.socialpulse.app.notification.domain.enums;

public enum NotificationType {
    FOLLOWED_YOU,
    POST_REACTED,
    COMMENTED_ON_POST,
    REPLIED_TO_COMMENT,
    COMMENT_REACTED
}
