package com.socialpulse.app.report.domain.enums;

public enum ReportStatus {
    PENDING,
    RESOLVED,
    REJECTED
}
