package com.socialpulse.app.report.domain.enums;

public enum ReviewAction {
    REJECT,
    DELETE_CONTENT,
    BAN_USER,
    DELETE_CONTENT_AND_BAN_USER
}
